@@ -23,34 +23,35 @@ import android.app.Dialog
 import android.content.Context
 import android.graphics.Color
 import android.os.Bundle
-import com.google.android.material.textfield.TextInputLayout
-import androidx.fragment.app.DialogFragment
-import androidx.appcompat.app.AlertDialog
+import android.view.View
 import android.widget.Button
 import android.widget.ImageView
 import android.widget.TextView
+import androidx.appcompat.app.AlertDialog
+import androidx.fragment.app.DialogFragment
+import com.google.android.material.textfield.TextInputLayout
 import com.kunzisoft.keepass.R
 import com.kunzisoft.keepass.activities.dialogs.GroupEditDialogFragment.EditGroupDialogAction.CREATION
 import com.kunzisoft.keepass.activities.dialogs.GroupEditDialogFragment.EditGroupDialogAction.UPDATE
 import com.kunzisoft.keepass.database.element.Database
-import com.kunzisoft.keepass.database.element.Group
-import com.kunzisoft.keepass.database.element.icon.IconImage
 import com.kunzisoft.keepass.icons.assignDatabaseIcon
+import com.kunzisoft.keepass.model.GroupInfo
 
 class GroupEditDialogFragment : DialogFragment(), IconPickerDialogFragment.IconPickerListener {
 
     private var mDatabase: Database? = null
 
-    private var editGroupListener: EditGroupListener? = null
+    private var mEditGroupListener: EditGroupListener? = null
 
-    private var editGroupDialogAction: EditGroupDialogAction? = null
-    private var nameGroup: String? = null
-    private var iconGroup: IconImage? = null
+    private var mEditGroupDialogAction = EditGroupDialogAction.NONE
+    private var mGroupInfo = GroupInfo()
 
-    private var nameTextLayoutView: TextInputLayout? = null
-    private var nameTextView: TextView? = null
     private var iconButtonView: ImageView? = null
     private var iconColor: Int = 0
+    private var nameTextLayoutView: TextInputLayout? = null
+    private var nameTextView: TextView? = null
+    private var notesTextLayoutView: TextInputLayout? = null
+    private var notesTextView: TextView? = null
 
     enum class EditGroupDialogAction {
         CREATION, UPDATE, NONE;
@@ -67,7 +68,7 @@ class GroupEditDialogFragment : DialogFragment(), IconPickerDialogFragment.IconP
         // Verify that the host activity implements the callback interface
         try {
             // Instantiate the NoticeDialogListener so we can send events to the host
-            editGroupListener = context as EditGroupListener
+            mEditGroupListener = context as EditGroupListener
         } catch (e: ClassCastException) {
             // The activity doesn't implement the interface, throw exception
             throw ClassCastException(context.toString()
@@ -76,16 +77,18 @@ class GroupEditDialogFragment : DialogFragment(), IconPickerDialogFragment.IconP
     }
 
     override fun onDetach() {
-        editGroupListener = null
+        mEditGroupListener = null
         super.onDetach()
     }
 
     override fun onCreateDialog(savedInstanceState: Bundle?): Dialog {
         activity?.let { activity ->
             val root = activity.layoutInflater.inflate(R.layout.fragment_group_edit, null)
+            iconButtonView = root?.findViewById(R.id.group_edit_icon_button)
             nameTextLayoutView = root?.findViewById(R.id.group_edit_name_container)
             nameTextView = root?.findViewById(R.id.group_edit_name)
-            iconButtonView = root?.findViewById(R.id.group_edit_icon_button)
+            notesTextLayoutView = root?.findViewById(R.id.group_edit_note_container)
+            notesTextView = root?.findViewById(R.id.group_edit_note)
 
             // Retrieve the textColor to tint the icon
             val ta = activity.theme.obtainStyledAttributes(intArrayOf(android.R.attr.textColor))
@@ -94,43 +97,40 @@ class GroupEditDialogFragment : DialogFragment(), IconPickerDialogFragment.IconP
 
             // Init elements
             mDatabase = Database.getInstance()
-            editGroupDialogAction = EditGroupDialogAction.NONE
-            nameGroup = ""
-            iconGroup = mDatabase?.iconFactory?.folderIcon
 
             if (savedInstanceState != null
                     && savedInstanceState.containsKey(KEY_ACTION_ID)
-                    && savedInstanceState.containsKey(KEY_NAME)
-                    && savedInstanceState.containsKey(KEY_ICON)) {
-                editGroupDialogAction = EditGroupDialogAction.getActionFromOrdinal(savedInstanceState.getInt(KEY_ACTION_ID))
-                nameGroup = savedInstanceState.getString(KEY_NAME)
-                iconGroup = savedInstanceState.getParcelable(KEY_ICON)
-
+                    && savedInstanceState.containsKey(KEY_GROUP_INFO)) {
+                mEditGroupDialogAction = EditGroupDialogAction.getActionFromOrdinal(savedInstanceState.getInt(KEY_ACTION_ID))
+                mGroupInfo = savedInstanceState.getParcelable(KEY_GROUP_INFO) ?: mGroupInfo
             } else {
                 arguments?.apply {
                     if (containsKey(KEY_ACTION_ID))
-                        editGroupDialogAction = EditGroupDialogAction.getActionFromOrdinal(getInt(KEY_ACTION_ID))
-
-                    if (containsKey(KEY_NAME) && containsKey(KEY_ICON)) {
-                        nameGroup = getString(KEY_NAME)
-                        iconGroup = getParcelable(KEY_ICON)
+                        mEditGroupDialogAction = EditGroupDialogAction.getActionFromOrdinal(getInt(KEY_ACTION_ID))
+                    if (containsKey(KEY_GROUP_INFO)) {
+                        mGroupInfo = getParcelable(KEY_GROUP_INFO) ?: mGroupInfo
                     }
                 }
             }
 
-            // populate the name
-            nameTextView?.text = nameGroup
             // populate the icon
             assignIconView()
+            // populate the name
+            nameTextView?.text = mGroupInfo.name
+            // populate the note
+            notesTextLayoutView?.visibility = if (mGroupInfo.notes == null) View.GONE else View.VISIBLE
+            mGroupInfo.notes?.let {
+                notesTextView?.text = it
+            }
 
             val builder = AlertDialog.Builder(activity)
             builder.setView(root)
                     .setPositiveButton(android.R.string.ok, null)
                     .setNegativeButton(android.R.string.cancel) { _, _ ->
-                        editGroupListener?.cancelEditGroup(
-                                editGroupDialogAction,
-                                nameTextView?.text?.toString(),
-                                iconGroup)
+                        retrieveGroupInfo()
+                        mEditGroupListener?.cancelEditGroup(
+                                mEditGroupDialogAction,
+                                mGroupInfo)
                     }
 
             iconButtonView?.setOnClickListener { _ ->
@@ -150,32 +150,40 @@ class GroupEditDialogFragment : DialogFragment(), IconPickerDialogFragment.IconP
         if (d != null) {
             val positiveButton = d.getButton(Dialog.BUTTON_POSITIVE) as Button
             positiveButton.setOnClickListener {
+                retrieveGroupInfo()
                 if (isValid()) {
-                    editGroupListener?.approveEditGroup(
-                            editGroupDialogAction,
-                            nameTextView?.text?.toString(),
-                            iconGroup)
+                    mEditGroupListener?.approveEditGroup(
+                            mEditGroupDialogAction,
+                            mGroupInfo)
                     d.dismiss()
                 }
             }
         }
     }
 
+    private fun retrieveGroupInfo() {
+        mGroupInfo.name = nameTextView?.text?.toString() ?: ""
+        // Only if there
+        val newNotes = notesTextView?.text?.toString()
+        if (newNotes != null && newNotes.isNotEmpty()) {
+            mGroupInfo.notes = newNotes
+        }
+    }
+
     private fun assignIconView() {
-        if (mDatabase?.drawFactory != null && iconGroup != null) {
-            iconButtonView?.assignDatabaseIcon(mDatabase?.drawFactory!!, iconGroup!!, iconColor)
+        if (mDatabase?.drawFactory != null) {
+            iconButtonView?.assignDatabaseIcon(mDatabase?.drawFactory!!, mGroupInfo.icon, iconColor)
         }
     }
 
     override fun iconPicked(bundle: Bundle) {
-        iconGroup = IconPickerDialogFragment.getIconStandardFromBundle(bundle)
+        mGroupInfo.icon = IconPickerDialogFragment.getIconStandardFromBundle(bundle) ?: mGroupInfo.icon
         assignIconView()
     }
 
     override fun onSaveInstanceState(outState: Bundle) {
-        outState.putInt(KEY_ACTION_ID, editGroupDialogAction!!.ordinal)
-        outState.putString(KEY_NAME, nameGroup)
-        outState.putParcelable(KEY_ICON, iconGroup)
+        outState.putInt(KEY_ACTION_ID, mEditGroupDialogAction.ordinal)
+        outState.putParcelable(KEY_GROUP_INFO, mGroupInfo)
         super.onSaveInstanceState(outState)
     }
 
@@ -188,17 +196,17 @@ class GroupEditDialogFragment : DialogFragment(), IconPickerDialogFragment.IconP
     }
 
     interface EditGroupListener {
-        fun approveEditGroup(action: EditGroupDialogAction?, name: String?, icon: IconImage?)
-        fun cancelEditGroup(action: EditGroupDialogAction?, name: String?, icon: IconImage?)
+        fun approveEditGroup(action: EditGroupDialogAction,
+                             groupInfo: GroupInfo)
+        fun cancelEditGroup(action: EditGroupDialogAction,
+                            groupInfo: GroupInfo)
     }
 
     companion object {
 
         const val TAG_CREATE_GROUP = "TAG_CREATE_GROUP"
-
-        const val KEY_NAME = "KEY_NAME"
-        const val KEY_ICON = "KEY_ICON"
         const val KEY_ACTION_ID = "KEY_ACTION_ID"
+        const val KEY_GROUP_INFO = "KEY_GROUP_INFO"
 
         fun build(): GroupEditDialogFragment {
             val bundle = Bundle()
@@ -208,11 +216,10 @@ class GroupEditDialogFragment : DialogFragment(), IconPickerDialogFragment.IconP
             return fragment
         }
 
-        fun build(group: Group): GroupEditDialogFragment {
+        fun build(groupInfo: GroupInfo): GroupEditDialogFragment {
             val bundle = Bundle()
-            bundle.putString(KEY_NAME, group.title)
-            bundle.putParcelable(KEY_ICON, group.icon)
             bundle.putInt(KEY_ACTION_ID, UPDATE.ordinal)
+            bundle.putParcelable(KEY_GROUP_INFO, groupInfo)
             val fragment = GroupEditDialogFragment()
             fragment.arguments = bundle
             return fragment
