@@ -5,3 +5,4 @@
  * Meilleure interface utilisateur #876
  * Correction des thèmes et ajout de Pourpre Sombre #889
  * Autoriser l'OTP avec de nombreux rembourrages #585
+ * Ajout des notes dans les groupes #734
