@@ -6,6 +6,7 @@ KeePassDX(2.9.13)
  * Better UI #876
  * Fix themes and add Purple Dark #889
  * Allow OTP with many padding #585
+ * Add notes in groups #734
 
 KeePassDX(2.9.12)
  * Fix OTP token type #863
